exe = executable('unitest',
    'alien.cc',
    'atomic.cc',
    'clist.cc',
    'co.cc',
    'fast.cc',
    'fastream.cc',
    'flag.cc',
    'fs.cc',
    'god.cc',
    'hash.cc',
    'json.cc',
    'main.cc',
    'mem.cc',
    'os.cc',
    'path.cc',
    'rand.cc',
    'stl.cc',
    'str.cc',
    'thread.cc',
    'time.cc',
    dependencies: co_dep
)
test('unitest', exe)
